--- a/docs/diploma.tex
+++ b/docs/diploma.tex
@@ -6,11 +6,10 @@
     candidate, % document type
     subf, % use and configure subfig package for nested figure numbering
     href,
-    times,
-    dotsinheaders=false,
-    colorlinks=false
+    dotsinheaders=false
 ]{disser}
 
+\hypersetup{colorlinks=false} % Configure hyperref loaded by disser class
 
 % Кодировка и язык
 \usepackage[T2A]{fontenc} % поддержка кириллицы
@@ -35,7 +34,7 @@
 
 % Библиография и ссылки
 \usepackage{cite} % поддержка цитирования
-\usepackage{hyperref}
+% \usepackage[colorlinks=false]{hyperref} % Removed - loaded by 'href' class option
 % \urlstyle{same}
 % \renewcommand{\UrlFont}{\rmdefault}
 
@@ -221,23 +220,22 @@
 
 \myunnumberedchapter{ВВЕДЕНИЕ}
 
-Привлечение инвестиций на начальных этапах развития остается главным вызовом для многих компаний \cite{bernstein2017attracting}. Существующие механизмы финансирования ранних стадий обладают рядом фундаментальных ограничений, включая неравномерное распределение информации между участниками, субъективность при оценке проектов и недостаточную защиту интеллектуальной собственности. В результате формируются значительные препятствия, затрудняющие взаимодействие между инновационными предпринимателями и потенциальными инвесторами, заинтересованными в выявлении и развитии многообещающих проектов.
+Существует класс задач по распределению ресурсов между участниками экосистемы
 
+Целью данной работы является разработка экономического механизма распределения ресурсов.
+
+Одной их таких задач является привлечение инвестиций на начальных этапах развития. Существующие механизмы финансирования ранних стадий обладают рядом фундаментальных ограничений, включая неравномерное распределение информации между участниками, субъективность при оценке проектов и недостаточную защиту интеллектуальной собственности. В результате формируются значительные препятствия, затрудняющие взаимодействие между инновационными предпринимателями и потенциальными инвесторами, заинтересованными в выявлении и развитии многообещающих проектов.
+
+Привлечение инвестиций на начальных этапах развития остается главным вызовом для многих компаний. Существующие механизмы финансирования ранних стадий обладают рядом фундаментальных ограничений, включая неравномерное распределение информации между участниками, субъективность при оценке проектов и недостаточную защиту интеллектуальной собственности. В результате формируются значительные препятствия, затрудняющие взаимодействие между инновационными предпринимателями и потенциальными инвесторами, заинтересованными в выявлении и развитии многообещающих проектов.
 
 Актуальность данной работы обусловлена растущей потребностью в создании более справедливой и эффективной системы распределения ресурсов для инновационных проектов на ранних стадиях. Существующие механизмы инвестирования в значительной степени полагаются на субъективные факторы, такие как личность основателя, его социальные связи и престиж образовательных учреждений, которые он окончил, вместо объективной оценки потенциала самой идеи. Это приводит к неоптимальному распределению ресурсов, когда перспективные проекты остаются без финансирования, а менее инновационные, но лучше представленные или имеющие более сильные связи проекты привлекают непропорционально большие инвестиции.
 
 
-Развитие современных технологий, в частности, блокчейна \cite{nakamoto2008bitcoin} и искусственного интеллекта, включая большие языковые модели \cite{vaswani2017attention},  открывает новые возможности для трансформации системы венчурного инвестирования. Блокчейн-технологии обеспечивают необходимую инфраструктуру для создания прозрачных, безопасных и неизменяемых записей о правах собственности, транзакциях и инвестиционных решениях. Криптографические протоколы, в частности, доказательства с нулевым разглашением (zero-knowledge proofs), позволяют верифицировать информацию без ее полного раскрытия, что критически важно для защиты интеллектуальной собственности.
-
-Искусственный интеллект, в свою очередь, предоставляет инструменты для объективного анализа и оценки потенциала проектов на основе структурированных данных, исторических паттернов и рыночных трендов. Алгоритмические системы оценки могут минимизировать влияние личных предубеждений и субъективных факторов, обеспечивая более справедливое распределение капитала.
-
-Интеграция механизмов квадратичного финансирования, разработанных группой исследователей в области криптоэкономики, и возрастающих кривых ограничения (augmented bonding curves) позволяет оптимизировать распределение ресурсов для инновационных проектов, учитывая не только размер инвестиций, но и широту поддержки в сообществе. Концепция механизма распределения ресурсов с балансом автоматизации и человеческого контроля обеспечивает баланс между эффективностью алгоритмической оценки и необходимостью человеческого контроля над принципиальными решениями.
-
-Целью данной работы является масштабирование механизма слепого инвестирования в ранние стадии стартапов, основанного на блокчейн-технологиях и искусственном интеллекте, объективную оценку проектов и оптимальное распределение капитала на основе принципов квадратичного финансирования и возрастающих кривых ограничения.
+Этот механизм будет применяться для решения проблемы инвестирования в ранние стадии стартапов, основанного на блокчейн-технологиях, объективную оценку проектов и оптимальное распределение капитала.
 
 Для достижения поставленной цели в работе решаются следующие задачи:
 \begin{enumerate}
-  \item Проведение анализа существующих механизмов инвестирования в ранние стадии, выявление их преимуществ и недостатков
+  \item Проведение анализа существующих механизмов распределения ресурсов, выявить их преимуществ и недостатки
   \item Изучение и адаптация механизмов квадратичного финансирования, возрастающих кривых ограничения и дистиллированного человеческого суждения
   \item Разработка архитектуры платформы, обеспечивающей защиту интеллектуальной собственности, объективную оценку и оптимальное распределение капитала
   \item Выбор и обоснование технологического стека для реализации платформы
@@ -592,7 +590,7 @@
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{./assets/database.png}
-  \caption{{\protect\hyperlink{figref:database}{Схема базы данных}}}
+  \caption{{\protect\hyperlink{fig:database}{Схема базы данных}}}
   \label{fig:database}
 \end{figure}
 
