old docs updates

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -7,37 +7,13 @@
   note    = {Accessed: 2025-02-02}
 }
 
-@article{vaswani2017attention,
-  author  = {Vaswani, A. and Shazeer, N. and Parmar, N. and Uszkoreit, J. and Jones, L. and Gomez, A. N. and Kaiser, L. and Polosukhin, I.},
-  title   = {Attention Is All You Need},
-  year    = {2017},
-  journal = {arXiv preprint arXiv:1706.03762},
-  url     = {https://arxiv.org/abs/1706.03762},
-  note    = {Accessed: 2025-02-22}
-}
-
-@online{buterin_website,
-  author = {Vitalik Buterin},
-  title  = {Vitalik Buterin's website},
-  year   = {2023},
-  url    = {https://vitalik.ca/},
-  note   = {Accessed: 2025-02-28}
-}
-
-@online{buterin_ai_engine,
-  author = {Vitalik Buterin},
-  title  = {AI as a process of elimination},
-  year   = {2023},
-  url    = {https://vitalik.ca/general/2023/06/09/ai_elimination.html},
-  note   = {Accessed: 2025-02-03}
-}
-
-@online{allo_capital,
-  author = {Allo},
-  title  = {Allo Capital - Decentralized Fundraising Platform},
-  year   = {2023},
-  url    = {https://allo.capital/},
-  note   = {Accessed: 2025-02-19}
+@article{king2012ppcoin,
+  author  = {Sunny King and Scott Nadal},
+  title   = {PPCoin: Peer-to-Peer Crypto-Currency with Proof-of-Stake},
+  year    = {2012},
+  journal = {Self-published},
+  url     = {https://decred.org/research/king2012.pdf},
+  note    = {Accessed: 2025-05-12}
 }
 
 @book{stanley2015greatness,
@@ -149,4 +125,132 @@
   number  = {3},
   pages   = {1105-1155},
   year    = {2020}
+}
+
+@article{imbierowicz2024peer,
+  author  = {Imbierowicz, Björn and Rauch, Christian},
+  title   = {Peer Valuations and Overpricing in Venture Markets},
+  journal = {Journal of Corporate Finance},
+  volume  = {84},
+  pages   = {102204},
+  year    = {2024}
+}
+
+@article{zatrochova2024angels,
+  author  = {Zatrochová, Sylvia},
+  title   = {The Role of Business Angels in Supporting Innovation: Evidence from Start-Up Ecosystems},
+  journal = {Venture Capital},
+  volume  = {26},
+  number  = {1},
+  pages   = {19--39},
+  year    = {2024}
+}
+
+@misc{yc_acceptance_rate,
+  author       = {{Y Combinator}},
+  title        = {Resources for Investors},
+  howpublished = {\url{https://www.ycombinator.com/investors}},
+  note         = {Accessed: 2025-05-12},
+  year         = {2025}
+}
+
+@article{condorcet1785essay,
+  author = {Condorcet, Marquis de},
+  title  = {Essay on the Application of Analysis to the Probability of Majority Decisions},
+  year   = {1785},
+  note   = {Reprinted in 1994 by Imprimerie Nationale, Paris}
+}
+
+@article{hayek1945use,
+  author  = {Hayek, Friedrich A.},
+  title   = {The Use of Knowledge in Society},
+  journal = {American Economic Review},
+  volume  = {35},
+  number  = {4},
+  pages   = {519--530},
+  year    = {1945}
+}
+
+@article{arrow1962economic,
+  author    = {Arrow, Kenneth J.},
+  title     = {Economic Welfare and the Allocation of Resources for Invention},
+  journal   = {The Rate and Direction of Inventive Activity},
+  pages     = {609--626},
+  year      = {1962},
+  publisher = {Princeton University Press}
+}
+
+@article{nash1951non,
+  author  = {Nash, John},
+  title   = {Non-Cooperative Games},
+  journal = {Annals of Mathematics},
+  volume  = {54},
+  number  = {2},
+  pages   = {286--295},
+  year    = {1951}
+}
+
+@article{sunstein2006availability,
+  author  = {Sunstein, Cass R.},
+  title   = {Availability Cascades and Risk Regulation},
+  journal = {Stanford Law Review},
+  volume  = {55},
+  number  = {3},
+  pages   = {629--679},
+  year    = {2006}
+}
+
+@article{mckelvey1995quantal,
+  author  = {McKelvey, Richard D. and Palfrey, Thomas R.},
+  title   = {Quantal Response Equilibria for Normal Form Games},
+  journal = {Games and Economic Behavior},
+  volume  = {10},
+  number  = {1},
+  pages   = {6--38},
+  year    = {1995}
+}
+
+@book{ostrom1990governing,
+  author    = {Ostrom, Elinor},
+  title     = {Governing the Commons: The Evolution of Institutions for Collective Action},
+  publisher = {Cambridge University Press},
+  year      = {1990}
+}
+
+@article{zatrochova2024angels,
+  author  = {Zatrochová, Sylvia},
+  title   = {The Role of Business Angels in Supporting Innovation: Evidence from Start-Up Ecosystems},
+  journal = {Venture Capital},
+  volume  = {26},
+  number  = {1},
+  pages   = {19--39},
+  year    = {2024}
+}
+
+@misc{kc2024,
+  title  = {2024 Investment Crowdfunding Trends and Platform Rankings},
+  author = {KingsCrowd},
+  year   = {2024},
+  url    = {https://kingscrowd.com/2024-investment-crowdfunding-trends-stats-and-platform-rankings/},
+  note   = {Accessed May 2025}
+}
+
+@misc{gii2024,
+  title  = {Global Innovation Index 2024},
+  author = {{WIPO}},
+  year   = {2024},
+  url    = {https://www.wipo.int/global_innovation_index/en/},
+  note   = {Accessed May 2025}
+}
+
+@article{lange2024angels,
+  author  = {Lange, J. and Rezepa, S. and Zatrochová, M.},
+  title   = {The Role of Business Angels in the Early-Stage Financing of Startups: A Systematic Literature Review},
+  journal = {Administrative Sciences},
+  volume  = {14},
+  number  = {10},
+  pages   = {247},
+  year    = {2024},
+  doi     = {10.3390/admsci14100247},
+  url     = {https://www.mdpi.com/2076-3387/14/10/247}
 }
