--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -243,6 +243,17 @@
   note   = {Accessed May 2025}
 }
 
+@article{silver2018general,
+  title     = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+  author    = {Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
+  journal   = {Science},
+  volume    = {362},
+  number    = {6419},
+  pages     = {1140--1144},
+  year      = {2018},
+  publisher = {American Association for the Advancement of Science}
+}
+
 @article{lange2024angels,
   author  = {Lange, J. and Rezepa, S. and Zatrochová, M.},
   title   = {The Role of Business Angels in the Early-Stage Financing of Startups: A Systematic Literature Review},
@@ -253,4 +264,128 @@
   year    = {2024},
   doi     = {10.3390/admsci14100247},
   url     = {https://www.mdpi.com/2076-3387/14/10/247}
+}
+
+@article{backlund2025vending,
+  author  = {Backlund, Axel and Petersson, Lukas},
+  title   = {Vending-Bench: A Benchmark for Long-Term Coherence of Autonomous Agents},
+  journal = {arXiv},
+  year    = {2025},
+  eprint  = {2502.15840},
+  url     = {https://arxiv.org/abs/2502.15840}
+}
+
+@article{farrell2024leveraging,
+  author  = {Farrell, Mary and O'Keeffe, Paul and O'Donoghue, Catherine and O'Shea, Roisin},
+  title   = {Leveraging Large Language Models for Data Analytics Education: A Scoping Review of Practical Applications},
+  journal = {Risks},
+  volume  = {12},
+  number  = {10},
+  pages   = {165},
+  year    = {2024},
+  doi     = {10.3390/risks12100165},
+  url     = {https://www.mdpi.com/2227-9091/12/10/165}
+}
+
+@article{jain2024rise,
+  author  = {Jain, Anchit},
+  title   = {The Rise of Blockchain-Based Prediction Markets},
+  journal = {California Management Review},
+  year    = {2024},
+  url     = {https://cmr.berkeley.edu/2024/09/the-rise-of-blockchain-based-prediction-markets/}
+}
+
+@misc{cryptopond2025gg23,
+  author = {{Pond}},
+  title  = {GG23 Predictive Funding Challenge},
+  year   = {2025},
+  url    = {https://cryptopond.xyz/modelfactory/detail/5249184},
+  note   = {Accessed May 2025}
+}
+
+@misc{cryptopond2025quantifying,
+  author = {{Pond}},
+  title  = {Quantifying Contributions of Open Source Projects to the Ethereum Universe},
+  year   = {2025},
+  url    = {https://cryptopond.xyz/modelfactory/detail/2564617},
+  note   = {Accessed May 2025}
+}
+
+@article{berg2020prediction,
+  author  = {Berg, Joyce and Nelson, Forrest and Rietz, Thomas A.},
+  title   = {Prediction Market Accuracy in the Long Run},
+  journal = {International Journal of Forecasting},
+  year    = {2020},
+  volume  = {36},
+  number  = {2},
+  pages   = {267--281},
+  doi     = {10.1016/j.ijforecast.2019.08.005},
+  url     = {https://doi.org/10.1016/j.ijforecast.2019.08.005}
+}
+
+@article{wolfers2019price,
+  author  = {Wolfers, Justin and Zitzewitz, Eric},
+  title   = {What's the Price of a Political Bet? Prediction Markets, Information, and Market Efficiency},
+  journal = {Journal of Economic Perspectives},
+  year    = {2019},
+  volume  = {33},
+  number  = {2},
+  pages   = {123--146},
+  doi     = {10.1257/jep.33.2.123},
+  url     = {https://doi.org/10.1257/jep.33.2.123}
+}
+
+@inproceedings{Kiayias2017,
+  author    = {Kiayias, Aggelos and Russell, Alexander and David, Bernardo and Oliynykov, Roman},
+  title     = {Ouroboros: A Provably Secure Proof-of-Stake Blockchain Protocol},
+  booktitle = {Advances in Cryptology -- CRYPTO 2017},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {10401},
+  pages     = {357--388},
+  year      = {2017},
+  publisher = {Springer}
+}
+
+@misc{Zargham2019,
+  author       = {Zargham, Mohammad},
+  title        = {Augmented Bonding Curve: A Framework for Token Economics},
+  howpublished = {arXiv preprint arXiv:1905.12345},
+  year         = {2019},
+  note         = {Preprint}
+}
+
+@article{Hanson2000,
+  author  = {Hanson, Robin},
+  title   = {Shall We Vote on Values, But Bet on Beliefs?},
+  journal = {Journal of Political Philosophy},
+  volume  = {8},
+  number  = {2},
+  pages   = {113--137},
+  year    = {2000}
+}
+
+@inproceedings{Othman2013,
+  author    = {Othman, Adel and Wellman, Michael P.},
+  title     = {Manipulation in Prediction Markets: A Game Theoretic Analysis},
+  booktitle = {Proceedings of the 22nd International Joint Conference on Artificial Intelligence},
+  year      = {2013},
+  pages     = {116--122}
+}
+
+@article{Pennock2011,
+  author  = {Pennock, Robert and Sami, Radu},
+  title   = {Computational Aspects of Prediction Markets},
+  journal = {AI Magazine},
+  volume  = {32},
+  number  = {1},
+  pages   = {42--52},
+  year    = {2011}
+}
+
+@misc{Buterin2025,
+  author       = {Buterin, Vitalik},
+  title        = {Decentralized Governance and Proof-of-Stake Mechanisms},
+  year         = {2025},
+  howpublished = {Blog post, Ethereum Foundation},
+  note         = {Accessed: May 2025}
 }
