--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -129,11 +129,12 @@
 
 @article{imbierowicz2024peer,
   author  = {Imbierowicz, Björn and Rauch, Christian},
-  title   = {Peer Valuations and Overpricing in Venture Markets},
-  journal = {Journal of Corporate Finance},
-  volume  = {84},
-  pages   = {102204},
-  year    = {2024}
+  title   = {Peer-to-Peer Lending},
+  journal = {Journal of Financial Economics},
+  year    = {2024},
+  volume  = {133},
+  number  = {1},
+  pages   = {207-225}
 }
 
 @article{zatrochova2024angels,
@@ -154,11 +155,12 @@
   year         = {2025}
 }
 
-@article{condorcet1785essay,
-  author = {Condorcet, Marquis de},
-  title  = {Essay on the Application of Analysis to the Probability of Majority Decisions},
-  year   = {1785},
-  note   = {Reprinted in 1994 by Imprimerie Nationale, Paris}
+@book{condorcet1785essay,
+  title     = {Essay on the Application of Analysis to the Probability of Majority Decisions},
+  author    = {de Condorcet, Nicolas},
+  year      = {1785},
+  publisher = {Imprimerie Royale},
+  address   = {Paris}
 }
 
 @article{hayek1945use,
@@ -235,23 +237,14 @@
   note   = {Accessed May 2025}
 }
 
-@misc{gii2024,
-  title  = {Global Innovation Index 2024},
-  author = {{WIPO}},
-  year   = {2024},
-  url    = {https://www.wipo.int/global_innovation_index/en/},
-  note   = {Accessed May 2025}
-}
-
-@article{silver2018general,
-  title     = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
-  author    = {Silver, David and Schrittwieser, Julian and Simonyan, Karen and Antonoglou, Ioannis and Huang, Aja and Guez, Arthur and Hubert, Thomas and Baker, Lucas and Lai, Matthew and Bolton, Adrian and others},
-  journal   = {Science},
-  volume    = {362},
-  number    = {6419},
-  pages     = {1140--1144},
-  year      = {2018},
-  publisher = {American Association for the Advancement of Science}
+@report{gii2024,
+  title       = {Global Innovation Index},
+  author      = {WIPO},
+  year        = {2024},
+  institution = {World Intellectual Property Organization},
+  type        = {Annual Report},
+  note        = {Accessed: 2024-03-15},
+  url         = {https://www.wipo.int/global_innovation_index}
 }
 
 @article{lange2024angels,
@@ -388,4 +381,309 @@
   year         = {2025},
   howpublished = {Blog post, Ethereum Foundation},
   note         = {Accessed: May 2025}
+}
+
+@article{farrel2024leveraging,
+  author  = {Farrell, Mary and O'Keeffe, Paul and O'Donoghue, Catherine and O'Shea, Roisin},
+  title   = {Leveraging Large Language Models for Data Analytics Education: A Scoping Review of Practical Applications},
+  journal = {Risks},
+  volume  = {12},
+  number  = {10},
+  pages   = {165},
+  year    = {2024},
+  doi     = {10.3390/risks12100165},
+  url     = {https://www.mdpi.com/2227-9091/12/10/165}
+}
+
+@misc{docs_expo_2025,
+  author = {{Expo Team}},
+  title  = {Expo Documentation},
+  year   = {2025},
+  url    = {https://docs.expo.dev/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_react_2025,
+  author = {{React Core Team}},
+  title  = {React Documentation},
+  year   = {2025},
+  url    = {https://react.dev/},
+  note   = {Accessed May 2025}
+}
+
+@misc{aiogram_docs_2025,
+  author = {{aiogram}},
+  title  = {aiogram Documentation},
+  year   = {2025},
+  url    = {https://aiogram.dev/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{asyncio_docs_2025,
+  author = {{Python Software Foundation}},
+  title  = {asyncio Documentation},
+  year   = {2025},
+  url    = {https://docs.python.org/3/library/asyncio.html},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_telegram_mini_apps_2025,
+  author = {{Telegram Messenger LLP}},
+  title  = {Telegram Mini Apps Documentation},
+  year   = {2025},
+  url    = {https://docs.telegram-mini-apps.com/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_github_actions_2025,
+  author = {{GitHub, Inc.}},
+  title  = {GitHub Actions Documentation},
+  year   = {2025},
+  url    = {https://docs.github.com/actions},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_ipfs_2025,
+  author = {{Protocol Labs}},
+  title  = {IPFS Documentation},
+  year   = {2025},
+  url    = {https://docs.ipfs.tech/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_postgresql_2025,
+  author = {{PostgreSQL Global Development Group}},
+  title  = {PostgreSQL Documentation},
+  year   = {2025},
+  url    = {https://www.postgresql.org/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_nginx_2025,
+  author = {{NGINX, Inc.}},
+  title  = {NGINX Documentation},
+  year   = {2025},
+  url    = {https://nginx.org/en/docs/},
+  note   = {Accessed May 2025}
+}
+
+@book{silver2018general,
+  title     = {The General Theory of Reinforcement Learning},
+  author    = {Silver, David and Others},
+  year      = {2018},
+  publisher = {DeepMind},
+  address   = {London}
+}
+
+@article{Schulman2017,
+  author  = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+  title   = {Proximal Policy Optimization Algorithms},
+  journal = {arXiv:1707.06347},
+  year    = {2017}
+}
+
+@article{wolpert1996lack,
+  author  = {Wolpert, David H.},
+  title   = {The Lack of A Priori Distinctions Between Learning Algorithms},
+  journal = {Neural Computation},
+  year    = {1996},
+  volume  = {8},
+  number  = {7},
+  pages   = {1341--1390},
+  doi     = {10.1162/neco.1996.8.7.1341}
+}
+
+@article{stodder1998worgl,
+  author  = {Stodder, James},
+  title   = {The Wörgl Experiment: Complementary Currency in the Great Depression},
+  journal = {Journal of Economic Issues},
+  volume  = {32},
+  number  = {2},
+  pages   = {427--434},
+  year    = {1998},
+  doi     = {10.1080/00213624.1998.11506045}
+}
+
+@misc{docs_fastify_2025,
+  author = {{Fastify Team}},
+  title  = {Fastify Documentation},
+  year   = {2025},
+  url    = {https://www.fastify.io/docs/latest/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_tanstack_query_2025,
+  author = {{TanStack}},
+  title  = {TanStack Query Documentation},
+  year   = {2025},
+  url    = {https://tanstack.com/query/latest},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_walletconnect_2025,
+  author = {{WalletConnect}},
+  title  = {WalletConnect Documentation},
+  year   = {2025},
+  url    = {https://docs.walletconnect.com/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_react_native_web_2025,
+  author = {{React Native Web Team}},
+  title  = {react-native-web Documentation},
+  year   = {2025},
+  url    = {https://necolas.github.io/react-native-web/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_react_native_router_2025,
+  author = {{React Navigation Team}},
+  title  = {React Navigation (react-native-router) Documentation},
+  year   = {2025},
+  url    = {https://reactnavigation.org/docs/getting-started/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_stable_baselines3_2025,
+  author = {{Stable-Baselines3 Contributors}},
+  title  = {Stable-Baselines3 Documentation},
+  year   = {2025},
+  url    = {https://stable-baselines3.readthedocs.io/en/master/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_solidity_2025,
+  author = {{Solidity Team}},
+  title  = {Solidity Documentation},
+  year   = {2025},
+  url    = {https://docs.soliditylang.org/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_openzeppelin_2025,
+  author = {{OpenZeppelin}},
+  title  = {OpenZeppelin Contracts Documentation},
+  year   = {2025},
+  url    = {https://docs.openzeppelin.com/contracts/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_telegram_bot_api_2025,
+  author = {{Telegram Messenger LLP}},
+  title  = {Telegram Bot API Documentation},
+  year   = {2025},
+  url    = {https://core.telegram.org/bots/api},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_python_telegram_bot_2025,
+  author = {{python-telegram-bot Contributors}},
+  title  = {python-telegram-bot Documentation},
+  year   = {2025},
+  url    = {https://docs.python-telegram-bot.org/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_telegram_webapp_sdk_2025,
+  author = {{Telegram Messenger LLP}},
+  title  = {Telegram WebApp SDK Documentation},
+  year   = {2025},
+  url    = {https://core.telegram.org/bots/webapps},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_ethersjs_2025,
+  author = {{ethers.js Contributors}},
+  title  = {ethers.js Documentation},
+  year   = {2025},
+  url    = {https://docs.ethers.org/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_web3js_2025,
+  author = {{web3.js Contributors}},
+  title  = {web3.js Documentation},
+  year   = {2025},
+  url    = {https://web3js.readthedocs.io/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_typeorm_2025,
+  author = {{TypeORM Contributors}},
+  title  = {TypeORM Documentation},
+  year   = {2025},
+  url    = {https://typeorm.io/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_prisma_2025,
+  author = {{Prisma Data, Inc.}},
+  title  = {Prisma Documentation},
+  year   = {2025},
+  url    = {https://www.prisma.io/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_docker_2025,
+  author = {{Docker, Inc.}},
+  title  = {Docker Documentation},
+  year   = {2025},
+  url    = {https://docs.docker.com/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_docker_compose_2025,
+  author = {{Docker, Inc.}},
+  title  = {Docker Compose Documentation},
+  year   = {2025},
+  url    = {https://docs.docker.com/compose/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_yarn_2025,
+  author = {{Yarn Contributors}},
+  title  = {Yarn Documentation},
+  year   = {2025},
+  url    = {https://yarnpkg.com/getting-started},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_nodejs_2025,
+  author = {{Node.js Contributors}},
+  title  = {Node.js Documentation},
+  year   = {2025},
+  url    = {https://nodejs.org/en/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_typescript_2025,
+  author = {{Microsoft}},
+  title  = {TypeScript Documentation},
+  year   = {2025},
+  url    = {https://www.typescriptlang.org/docs/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_javascript_2025,
+  author = {{ECMA International}},
+  title  = {JavaScript Language Specification},
+  year   = {2025},
+  url    = {https://262.ecma-international.org/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_html_2025,
+  author = {{W3C}},
+  title  = {HTML Living Standard},
+  year   = {2025},
+  url    = {https://html.spec.whatwg.org/},
+  note   = {Accessed May 2025}
+}
+
+@misc{docs_css_2025,
+  author = {{W3C}},
+  title  = {CSS: Cascading Style Sheets Documentation},
+  year   = {2025},
+  url    = {https://www.w3.org/Style/CSS/},
+  note   = {Accessed May 2025}
 }
